[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="P2P" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Create Lobby" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 37.0
text = "Create Lobby"
__meta__ = {
"_edit_lock_": true
}

[node name="Open Lobby List" type="Button" parent="."]
margin_left = 300.0
margin_top = 8.0
margin_right = 497.0
margin_bottom = 37.0
text = "Open Lobby List"
__meta__ = {
"_edit_lock_": true
}

[node name="Send Packet" type="Button" parent="."]
margin_left = 817.0
margin_top = 8.0
margin_right = 1014.0
margin_bottom = 37.0
disabled = true
text = "Send Test Packet"
__meta__ = {
"_edit_lock_": true
}

[node name="Get Lobby Data" type="Button" parent="."]
margin_left = 8.0
margin_top = 48.0
margin_right = 205.0
margin_bottom = 77.0
disabled = true
text = "Get Lobby Data"
__meta__ = {
"_edit_lock_": true
}

[node name="Leave Lobby" type="Button" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 205.0
margin_bottom = 117.0
disabled = true
text = "Leave Lobby"
__meta__ = {
"_edit_lock_": true
}

[node name="Lobby" type="Label" parent="."]
margin_left = 334.541
margin_top = 138.712
margin_right = 639.541
margin_bottom = 163.712
text = "Lobby ID: 0"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Output" type="Panel" parent="."]
margin_left = 8.0
margin_top = 166.0
margin_right = 720.0
margin_bottom = 556.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Output"]
margin_left = 2.0
margin_top = -27.0
margin_right = 712.0
margin_bottom = -2.0
text = "Output Display"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Display" type="RichTextLabel" parent="Output"]
margin_left = 10.0
margin_top = 10.0
margin_right = 703.0
margin_bottom = 416.0
custom_constants/shadow_as_outline = 50
scroll_following = true
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Panel" parent="."]
margin_left = 733.0
margin_top = 166.0
margin_right = 1015.0
margin_bottom = 556.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Players"]
margin_left = 2.0
margin_top = -27.0
margin_right = 712.0
margin_bottom = -2.0
text = "Player List (0)"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Display" type="RichTextLabel" parent="Players"]
margin_left = 10.0
margin_top = 10.0
margin_right = 703.0
margin_bottom = 416.0
custom_constants/shadow_as_outline = 50
scroll_following = true
__meta__ = {
"_edit_lock_": true
}

[node name="Lobby Panel" type="PopupPanel" parent="."]
margin_left = 99.0
margin_top = 86.0
margin_right = 932.0
margin_bottom = 558.0
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Lobby Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 829.0
margin_bottom = 468.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Lobby Panel/Panel"]
margin_left = 8.14508
margin_top = 8.14507
margin_right = 302.145
margin_bottom = 34.1451
text = "Lobby List"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Scroll" type="ScrollContainer" parent="Lobby Panel/Panel"]
margin_left = 8.0
margin_top = 41.0
margin_right = 825.0
margin_bottom = 416.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBox" type="VBoxContainer" parent="Lobby Panel/Panel/Scroll"]
__meta__ = {
"_edit_lock_": true
}

[node name="Close Lobbies" type="Button" parent="Lobby Panel/Panel"]
margin_left = 625.712
margin_top = 430.274
margin_right = 826.712
margin_bottom = 464.274
text = "Close Lobby List"
__meta__ = {
"_edit_lock_": true
}

[node name="Chat" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 568.0
margin_right = 581.0
margin_bottom = 592.0
editable = false
placeholder_text = "Enter a chat message..."
__meta__ = {
"_edit_lock_": true
}

[node name="Send Chat" type="Button" parent="."]
margin_left = 596.0
margin_top = 568.0
margin_right = 720.0
margin_bottom = 592.0
disabled = true
text = "Send Message"
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Create Lobby" to="." method="_on_Create_Lobby_pressed"]
[connection signal="pressed" from="Open Lobby List" to="." method="_on_Open_Lobby_List_pressed"]
[connection signal="pressed" from="Send Packet" to="." method="_on_Send_Packet_pressed"]
[connection signal="pressed" from="Get Lobby Data" to="." method="_on_Get_Lobby_Data_pressed"]
[connection signal="pressed" from="Leave Lobby" to="." method="_on_Leave_Lobby_pressed"]
[connection signal="pressed" from="Lobby Panel/Panel/Close Lobbies" to="." method="_on_Close_Lobbies_pressed"]
[connection signal="pressed" from="Send Chat" to="." method="_on_Send_Chat_pressed"]
